--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 springdoc.api-docs.path=/api-docs 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+springdoc.api-docs.path=/api-docs
+#http://localhost:8080/swagger-ui/index.html
