--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,20 @@
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>2.5.0</version>
    </dependency>
+   <dependency>
+  		<groupId>io.jsonwebtoken</groupId>
+  		<artifactId>jjwt</artifactId>
+  		<version>0.9.1</version>
+	</dependency>
+	<dependency>
+ 		 <groupId>org.springframework.boot</groupId>
+ 		 <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+    <groupId>org.hibernate.validator</groupId>
+    <artifactId>hibernate-validator</artifactId>
+</dependency>
+
 	</dependencies>
 
 	<build>
