--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>Chase_Service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Chase_Service</name>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot </description>
 	<url/>
 	<licenses>
@@ -65,6 +66,12 @@
 </dependency> -->
 
 <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-tomcat</artifactId>
+    <scope>provided</scope>
+</dependency>
+
+<dependency>
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
     <optional>true</optional>
@@ -88,6 +95,12 @@
     <groupId>org.springdoc</groupId>
     <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
     <version>2.5.0</version>
+</dependency>
+
+<dependency> 
+    <groupId>javax.xml.bind</groupId> 
+    <artifactId>jaxb-api</artifactId>
+    <version>2.1</version>
 </dependency>
 
 
