--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>Chase_Service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Chase_Service</name>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot </description>
 	<url/>
 	<licenses>
@@ -56,6 +57,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-tomcat</artifactId>
+    <scope>provided</scope>
+</dependency>
+		<dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>2.5.0</version>
@@ -73,7 +79,11 @@
     <groupId>org.hibernate.validator</groupId>
     <artifactId>hibernate-validator</artifactId>
 </dependency>
-
+<dependency>
+    <groupId>javax.xml.bind</groupId> 
+    <artifactId>jaxb-api</artifactId>
+    <version>2.1</version>
+</dependency>
 	</dependencies>
 
 	<build>
