--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=9091
+
 spring.application.name=Chase_Service
 
 
@@ -17,3 +19,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 springdoc.api-docs.path=/api-docs
 #http://localhost:8080/swagger-ui/index.html
+
