--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
     <artifactId>jaxb-api</artifactId>
     <version>2.1</version>
 </dependency>
+<dependency>
+   <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-webflux</artifactId>
+    <version>3.4.6</version>
+</dependency>
 	</dependencies>
 
 	<build>
